--- a/chess/src/main/resources/static/css/global.css
+++ b/chess/src/main/resources/static/css/global.css
@@ -8,11 +8,9 @@
 body {
     margin: 0;
     padding: 0;
-    display: flex;
     background-color: #f4f4f4;
     min-height: 100vh;
     font-size: 1vw;
-    align-items: stretch;
     justify-content: center;
     flex-direction: row;
     overflow: auto;
